Fixed an animation issue for the notification bell on mobile devices, fixes #361.

--- a/app/assets/stylesheets/components/menu.scss
+++ b/app/assets/stylesheets/components/menu.scss
@@ -19,12 +19,12 @@ $current-tab-color: $btn-success-color;
   color: $brand-danger;
 }
 
-.navbar-default .navbar-nav .notifications-link {
+.navbar-default .navbar-nav .notifications-link span {
   animation: wiggle 250ms linear 4;
   color: $link-color;
 }
 
-.navbar-default .navbar-nav .notifications-link:hover {
+.navbar-default .navbar-nav .notifications-link:hover span {
   color: $link-hover-color;
 }
 
